--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 
 members = ["vrm", "relayer"]
 exclude = ["email-wallet-contracts"]
+default-members = ["vrm"]
 
 [patch."https://github.com/axiom-crypto/halo2-lib.git"]
 halo2-base = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }
