--- a/vrm/Cargo.toml
+++ b/vrm/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+relayer = { path = "../relayer" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.0", features = ["full"] }
@@ -28,3 +29,10 @@ rand = "0.8.5"
 hex = "0.4.3"
 hex-literal = "0.4.1"
 itertools = "0.10.3"
+clap = { version = "4.2.1", features = ["derive"] }
+
+[[bin]]
+name = "email_wallet"
+path = "./src/main.rs"
+test = false
+bench = false
