--- a/vrm/Cargo.toml
+++ b/vrm/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-relayer = { path = "../relayer" }
+relayer = { path = "../relayer", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.68"
+serde_json = "1"
 tokio = { version = "1.0", features = ["full"] }
 dotenv = "0.15.0"
 base64 = "0.21.0"
@@ -19,7 +19,6 @@ sha2 = "0.10.6"
 tower = "0.4.13"
 tower-http = "0.4.0"
 async-trait = "0.1.68"
-# multipart = "0.18.0"
 bytes = "1.4.0"
 futures-util = "0.3.28"
 anyhow = "1.0.70"
@@ -30,6 +29,10 @@ hex = "0.4.3"
 hex-literal = "0.4.1"
 itertools = "0.10.3"
 clap = { version = "4.2.1", features = ["derive"] }
+js-sandbox = { version = "0.2.0-rc.1", git = "https://github.com/Bromeon/js-sandbox.git" }
+# daggy = "0.8.0"
+petgraph = "0.6.3"
+graph-cycles = "0.1.0"
 
 [[bin]]
 name = "email_wallet"
