--- a/entry_config.json
+++ b/entry_config.json
@@ -24,7 +24,7 @@
             {
                 "is_public": true,
                 "regex_def": "(ETH|DAI)",
-                "max_size": 20,
+                "max_size": 3,
                 "solidity": {
                     "type": "String"
                 }
@@ -41,6 +41,52 @@
                 "solidity": {
                     "type": "String"
                 }
+            }
+        ],
+        "2": [
+            {
+                "is_public": false,
+                "regex_def": "Swap ",
+                "max_size": 9
+            },
+            {
+                "is_public": true,
+                "regex_def": "(0|1|2|3|4|5|6|7|8|9|\\.)+",
+                "max_size": 20,
+                "solidity": {
+                    "type": "Decimal"
+                }
+            },
+            {
+                "is_public": false,
+                "regex_def": " ",
+                "max_size": 1
+            },
+            {
+                "is_public": true,
+                "regex_def": "(ETH|DAI)",
+                "max_size": 3,
+                "solidity": {
+                    "type": "String"
+                }
+            },
+            {
+                "is_public": false,
+                "regex_def": " to ",
+                "max_size": 4
+            },
+            {
+                "is_public": true,
+                "regex_def": "(ETH|DAI)",
+                "max_size": 3,
+                "solidity": {
+                    "type": "String"
+                }
+            },
+            {
+                "is_public": false,
+                "regex_def": " via Uniswap",
+                "max_size": 13
             }
         ]
     }
