--- a/vrm/src/app_default.config
+++ b/vrm/src/app_default.config
@@ -4,17 +4,17 @@
     "num_lookup_advice": 1,
     "num_fixed": 1,
     "lookup_bits": 19,
-    "bodyhash_regex_filepath": "./configs/regex_bodyhash.txt",
-    "bodyhash_substr_filepath": "./configs/substr_bodyhash.txt",
+    "bodyhash_regex_filepath": "relayer/configs/regex_bodyhash.txt",
+    "bodyhash_substr_filepath": "relayer/configs/substr_bodyhash.txt",
     "header_regex_filepathes": [
-        "./configs/regex_from.txt",
-        "./configs/regex_to.txt",
-        "./configs/regex_subject.txt"
+        "relayer/configs/regex_from.txt",
+        "relayer/configs/regex_to.txt",
+        "relayer/configs/regex_subject.txt"
     ],
     "header_substr_filepathes": [
-        "./configs/substr_from.txt",
-        "./configs/substr_to.txt",
-        "./configs/substr_subject.txt"
+        "relayer/configs/substr_from.txt",
+        "relayer/configs/substr_to.txt",
+        "relayer/configs/substr_subject.txt"
     ],
     "body_regex_filepathes": [
     ],
