Remove vrm and rewrite commands.

--- a/src/templates/app_default.config
+++ b/src/templates/app_default.config
@@ -4,25 +4,24 @@
     "num_lookup_advice": 1,
     "num_fixed": 1,
     "lookup_bits": 19,
-    "bodyhash_regex_filepath": "relayer/configs/regex_bodyhash.txt",
-    "bodyhash_substr_filepath": "relayer/configs/substr_bodyhash.txt",
+    "bodyhash_regex_filepath": "./configs/bodyhash_allstr.txt",
+    "bodyhash_substr_filepath": "./configs/bodyhash_substr_0.txt",
     "header_regex_filepathes": [
-        "relayer/configs/regex_from.txt",
-        "relayer/configs/regex_to.txt",
-        "relayer/configs/regex_subject.txt"
+        "./configs/from_allstr.txt",
+        "./configs/to_allstr.txt",
+        "./configs/subject_allstr.txt"
     ],
     "header_substr_filepathes": [
-        "relayer/configs/substr_from.txt",
-        "relayer/configs/substr_to.txt",
-        "relayer/configs/substr_subject.txt"
+        "./configs/from_substr_0.txt",
+        "./configs/to_substr_0.txt",
+        "./configs/subject_substr_0.txt"
     ],
-    "body_regex_filepathes": [
-    ],
+    "body_regex_filepath": "",
     "body_substr_filepathes": [
     ],
     "num_sha2_compression_per_column": 1,
-    "header_max_byte_size": 0,
-    "body_max_byte_size": 0,
+    "header_max_byte_size": 512,
+    "body_max_byte_size": 512,
     "public_key_bits": 2048,
     "header_substr_regexes": [
         [
