--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,39 @@
-[workspace]
+[package]
+name = "email_wallet"
+version = "0.1.0"
+edition = "2021"
 
-members = ["vrm", "relayer"]
-exclude = ["email-wallet-contracts"]
-default-members = ["vrm"]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+relayer = { git = "https://github.com/zkemail/relayer.git", version = "0.1.0", branch = "main", default-features = false }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
+tokio = { version = "1.0", features = ["full"] }
+dotenv = "0.15.0"
+base64 = "0.21.0"
+hyper = "0.14.25"
+duct = "0.13.6"
+futures = "0.3.28"
+sha2 = "0.10.6"
+tower = "0.4.13"
+tower-http = "0.4.0"
+async-trait = "0.1.68"
+bytes = "1.4.0"
+futures-util = "0.3.28"
+anyhow = "1.0.70"
+fancy-regex = "0.11.0"
+halo2-zk-email = { version = "0.1.0", git = "https://github.com/zkemail/halo2-zk-email.git", branch = "main" }
+rand = "0.8.5"
+hex = "0.4.3"
+hex-literal = "0.4.1"
+itertools = "0.10.3"
+clap = { version = "4.2.1", features = ["derive"] }
+js-sandbox = { version = "0.2.0-rc.1", git = "https://github.com/Bromeon/js-sandbox.git" }
+# daggy = "0.8.0"
+petgraph = "0.6.3"
+graph-cycles = "0.1.0"
+
 
 [patch."https://github.com/axiom-crypto/halo2-lib.git"]
 halo2-base = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }
